<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_camera_driver_rs</name>
  <version>0.0.1</version>
  <description>A ROS 2 camera driver written in Rust.</description>
  <maintainer email="yadunund@gmail.com">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclrs</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
